[metadata]
name = readthedocs
version = 5.14.3
license = MIT
description = Read the Docs builds and hosts documentation
author = Snehangshu Karmakar
author_email = snehangshu@gmail.com
url = http://readthedocs.org
classifiers = 
	Development Status :: 5 - Production/Stable
	Environment :: Web Environment
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Framework :: Django

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
	## snkarmak: from requirements/pip.txt
	# Base packages

	pip==21.0.1
	virtualenv==20.4.3

	django==2.2.20  # pyup: <2.3
	django-extensions==3.1.2
	django_polymorphic==3.0.0
	django-autoslug==1.9.8

	djangorestframework==3.12.4

	# For intersphinx during builds
	Sphinx==3.5.4

	# Filtering for the REST API
	django-filter==2.4.0

	drf-flex-fields==0.8.9
	drf-extensions==0.7.0

	django-vanilla-views==2.0.0
	jsonfield==3.1.0

	requests==2.25.1
	requests-toolbelt==0.9.1
	slumber==0.7.1
	pyyaml==5.4.1
	Pygments==2.8.1

	# Basic tools
	redis==3.5.3
	kombu==5.0.2
	celery==5.0.5

	# When upgrading to 0.43.0 we should double check the ``base.html`` change
	# described in the changelog. In previous versions, the allauth app included a
	# ``base.html`` template. This template could conflict with an equally named
	# template at project level. Therefore, ``base.html`` has now been moved to
	# ``account/base.html`` -- you will need to check your templates and likely
	# override ``account/base.html`` within your project.
	django-allauth==0.42.0  # pyup: ignore

	GitPython==3.1.14

	# Search
	elasticsearch==7.12.0  # pyup: <8.0.0
	elasticsearch-dsl==7.3.0  # pyup: <8.0
	django-elasticsearch-dsl==7.2.0  # pyup: <8.0
	selectolax==0.2.11

	# embed
	pyquery==1.4.3

	# NOTE: this dep can be removed in python 3.7 in favor of ``date.fromisoformat``
	python-dateutil==2.8.1

	# Ignoring orjson for now because it makes Travis to fail
	orjson==2.0.7  # pyup: ignore

	# Utils
	django-gravatar2==1.4.4
	pytz==2021.1
	Unipath==1.1
	django-kombu==0.9.4
	stripe==2.56.0
	regex==2021.4.4

	# snkarmak: Looking for suggestion on ELRing unicode-slugify for the source
	# unicode-slugify==0.1.5 is not released on PyPI yet
	# git+https://github.com/mozilla/unicode-slugify@b696c37#egg=unicode-slugify==0.1.5
	

	django-formtools==2.3
	django-crispy-forms==1.11.2

	docker==5.0.0

	django-textclassifier==1.0
	# django-textclassifier doesn't have pinned versions
	# if there is an update they could break our code
	nltk==3.6.1
	textblob==0.15.3

	django-annoying==0.10.6
	django-messages-extends==0.6.2
	djangorestframework-jsonp==1.0.2
	django-taggit==1.4.0
	dj-pagination==2.5.0

	# Version comparison stuff
	packaging==20.9

	# django-cors-middleware==1.5.0 fails with
	# AttributeError: 'dict' object has no attribute 'has_header'
	django-cors-middleware==1.4.0  # pyup: ignore

	# User agent parsing - used for analytics purposes
	user-agents==2.2.0


	# snkarmak: Looking for suggestion on ELRing django-storages[boto3]==1.9.1 for the source
	# Utilities used to upload build media to cloud storage
	# django-storages is pinned to this particular commit because it
	# supports generating URLs with other method than GET when using
	# private buckets.
	#
	# Besides, support for the corresponding AWS_BUCKET_ACL and
	# AWS_AUTO_CREATE_BUCKET settings have been removed in 1.10. We depend on this
	# in our Docker setup. We can upgrade it but we need to add a
	# `create_buckets.sh` to be called on `--init` as we used to do for Azurite
	# https://github.com/jschneier/django-storages/pull/636
	# git+https://github.com/jschneier/django-storages@d0f027c98a877f75615cfc42b4d51c038fa41bf6#egg=django-storages[boto3]==1.9.1


	# Required only in development and linting
	django-debug-toolbar==3.2.1

	# For enabling content-security-policy
	django-csp==3.7

	## snkarmak: requirements/deploy.txt
	# Requirements for our production systems

	psycopg2==2.8.6
	gunicorn==20.1.0

	# Version 3.0.0 drops support for Django < 3.0
	# https://github.com/sebleier/django-redis-cache/#300
	django-redis-cache==2.1.3  # pyup: ignore

	#For resizing images
	pillow==8.2.0

	## snkarmak: requirements/docker.txt
	# Requirements for our local docker development

	# https://www.psycopg.org/docs/install.html#psycopg-vs-psycopg-binary
	psycopg2-binary==2.8.6

	# Version 3.0.0 drops support for Django < 3.0
	# https://github.com/sebleier/django-redis-cache/#300
	django-redis-cache==2.1.3  # pyup: ignore

	# For resizing images
	pillow==8.2.0

	# local debugging tools
	watchdog==2.0.2
	datadiff==2.0.0
	ipdb==0.13.7
	pdbpp==0.10.2

	# jedi 0.18 is incompatible with ipython
	# https://github.com/ipython/ipython/issues/12740
	jedi>0.17,<0.18  # pyup: ignore

	# watchdog dependency
	argh==0.26.2

	# run tests
	tox==3.23.0
	# Packages required to build docs, independent of application dependencies

	Sphinx==3.5.4
	Pygments==2.8.1

	# doctuils==0.15 produces this error
	#   File "python3.6/site-packages/docutils/parsers/rst/states.py", line 882, in interpreted
	#    nodes[0][0].rawsource = unescape(text, True)
	# AttributeError: 'str' object has no attribute 'rawsource'  File "python3.6/site-packages/docutils/parsers/rst/states.py", line 882, in interpreted
	#     nodes[0][0].rawsource = unescape(text, True)
	# AttributeError: 'str' object has no attribute 'rawsource'
	docutils==0.14  # pyup: ignore

	sphinx_rtd_theme==0.5.2
	sphinx-tabs==2.1.0
	sphinx-intl==2.0.1

	readthedocs-sphinx-search==0.1.0

	# snkarmak: sphinx-hoverxref pre-release available
	# Test out hoverxref
	# git+https://github.com/readthedocs/sphinx-hoverxref@master
	sphinx-hoverxref>=0.5b1

	# Docs
	sphinxemoji==0.1.8
	sphinxcontrib-httpdomain==1.7.0
	sphinx-prompt==1.4.0
	sphinx-notfound-page==0.6
	commonmark==0.9.1
	recommonmark==0.7.1
	sphinx-autobuild==2021.3.14

	# Linting
	rstcheck==3.3.1

	## snkarmak: requirements/linit.txt
	# Packages required for doing linting

	prospector==1.3.1

	## snkarmak: requirements/testing.txt
	# Packages required for running tests

	django-dynamic-fixture==3.1.1
	pytest==6.2.3
	pytest-custom-exit-code==0.3.0
	pytest-django==4.2.0
	pytest-xdist==2.2.1
	pytest-cov==2.11.1
	apipkg==1.5
	execnet==1.8.0

	# Mercurial 4.3 and newer require Python 2.7
	# Mercurial is actively being ported to Python 3. As of Mercurial 4.3,
	# some commands work on Python 3. However, Python 3 is not yet a
	# supported platform.
	# mercurial-scm.org/wiki/SupportedPythonVersions
	# (Pinned to 4.4.2 since what we need for testing is still useful)
	Mercurial==4.4.2  # pyup: ignore

	yamale==2.2.0  # pyup: <3.0
	pytest-mock==3.5.1

	# local debugging tools
	datadiff==2.0.0
	ipdb==0.13.7

	requests-mock==1.8.0

dependency_links = 
	git+https://github.com/mozilla/unicode-slugify@b696c37#egg=unicode-slugify==0.1.5
	git+https://github.com/jschneier/django-storages@d0f027c98a877f75615cfc42b4d51c038fa41bf6#egg=django-storages[boto3]==1.9.1

[tool:release]
github_owner = readthedocs
github_repo = readthedocs.org
